ui issue fix, text wrapping, remove start shopping button

--- a/feature-libs/organization/unit-order/styles/components/unit-level-order-history/_unit-level-order-history.scss
+++ b/feature-libs/organization/unit-order/styles/components/unit-level-order-history/_unit-level-order-history.scss
@@ -300,6 +300,7 @@
       flex-basis: 100%;
       justify-content: flex-end;
       margin-top: 2rem;
+      white-space: nowrap;
     }
 
     .cx-selected-filters {
